# F5TTS-CPU_ONLY-WebUI

./: README.de.md  README.md  install.bat  launch.bat  pyproject.toml
src/f5_tts/infer/: utils_infer.py
src/f5_tts/train/: finetune_gradio.py
