[project]
name = "f5-tts"
version = "0.0.1"
description = "A flow-matching based voice conversion and text-to-speech model"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["tts", "vc"]
authors = [
    { name = "Pik-Cor", email = "pik.cor.1@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "accelerate>=0.33.0",
    "cached_path",
    "click",
    "datasets",
    "ema_pytorch>=0.5.2",
    "gradio>=3.45.2",
    "hydra-core>=1.3.0",
    "jieba",
    "librosa",
    "matplotlib",
    "numpy<=1.26.4",
    "pydantic<=2.10.6",
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "tomli",
    # --- CPU-ONLY FIX ---
    # Pinned to a specific version known to be stable for CPU inference.
    # Newer versions (2.2+) have a known bug with the Whisper ASR model on CPU.
    "torch==2.1.2",
    "torchaudio==2.1.2",
    # -------------------
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "unidecode",
    "vocos",
    "wandb",
    "x_transformers>=1.31.14",
    # --- CPU-ONLY FIX ---
    # bitsandbytes is for NVIDIA GPUs and fails on CPU-only systems.
    # It has been commented out to ensure compatibility.
    # "bitsandbytes>0.37.0; platform_machine != 'arm64' and platform_system != 'Darwin'",
    # -------------------
]

[project.urls]
Homepage = "https://github.com/F5-TTS/F5-TTS"

[project.scripts]
f5-tts_preprocess = "f5_tts.scripts.preprocess:main"
f5-tts_train = "f5_tts.scripts.train:main"
f5-tts_infer-gradio = "f5_tts.infer.infer_gradio:main"
f5-tts_infer-cli = "f5_tts.infer.infer_cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
